tests/NormalTests/paczka1/small_fuzzy/22361714.err
Error in line 7: fVcvc S37 24,2
Error in line 9: fVcvc A712 0,9
Error in line 11: yQBIssxnwSN S881 84,3
